apps/sk-ambulance-webapi/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sk-ambulance-webapi
spec:
  parentRefs:
    - name: wac-hospital-gateway
      namespace: wac-hospital
    - name: wac-hospital-gateway  # Hack to make it work for common cluster
      namespace: wac-hospital-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /sk-api
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /api
      backendRefs:
        - group: ""
          kind: Service
          name: sk-ambulance-webapi
          port: 80
    - matches:
      - path:
          type: PathPrefix
          value: /sk-openapi-ui
      backendRefs:
        - group: ""
          kind: Service
          name: sk-openapi-ui
          port: 80
